fix triangle goes behind the slider

--- a/scss/utilities/_mixins.scss
+++ b/scss/utilities/_mixins.scss
@@ -5,6 +5,7 @@
     z-index: 1;
     border-style: solid;
     border-width: 35px $size 0;
+    z-index:4;
     @if($color != null){
         border-color: $color transparent transparent;
     }
